# ClanManager

./: .gitignore  .pre-commit-config.yaml  README.md  crApiWrapper.py  gsheeetsApiWrapper.py  gsheets-updater.py  gsheetsApiWrapper.py  gsheetsManager.py  historyWrapper.py  player-ranking.py  playerPresence.py  properties.yaml  requirements.txt
cli-client/: .env  PlayerRanking.bat  README.md  playerPresence.py  properties.yaml  pyproject.toml  ranking_parameters.yaml  run_player_ranking.py
cli-client/cli_client/: __main__.py
cli-client/cli_client/clanmanager/: crApiWrapper.py  evalutation_performer.py  playerRanking.py
cli-client/data/: ranking_parameters_model.yaml
cli-client/src/player_ranking/: clan.py  crApiWrapper.py  cr_api_client.py  datetime_util.py  discord_client.py  evaluation_performer.py  evalutation_performer.py  excuse_acceptor.py  excuse_handler.py  gsheetsApiWrapper.py  gsheets_api_client.py  historyWrapper.py  history_wrapper.py  logging_config.py  playerRanking.py  player_ranking.py  ranking_parameters.py  ranking_parameters_validation.py
cli-client/src/player_ranking/models/: clan.py  clan_member.py  ranking_parameters.py  ranking_parameters_validation.py
cli-client/tests/: conftest.py  helpers.py  test_ignore_wars.py
cli-client/tests/unit/: test_cr_api_client.py  test_datetime_util.py  test_excuse_handler.py
cli-client/tests/unit/models/: test_ranking_parameters_validation.py
cli_client/: .gitignore  __main__.py  properties.yaml  requirements.txt
playerRanking/: __main__.py  crApiWrapper.py  evalutation_performer.py  (+3 more)
(+40 files in other folders)
